<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ElectricityBillActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/customer_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/customer_name_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/customer_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_email"
        android:inputType="textWebEmailAddress" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
            android:id="@+id/other_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>

    <EditText
        android:id="@+id/bill_date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/date" />

    <EditText
        android:id="@+id/units_consumed_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/units_consumed" />

    <TextView
        android:id="@+id/total_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="24sp"
        android:text="Total: $0" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:onClick="confirmPressed"/>

</LinearLayout>